# MCP-Telecom

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  devices.yaml.example  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
examples/: claude_desktop_config.json  usage_examples.md
src/mcp_telecom/: __init__.py  audit.py  compliance.py  connection.py  containerlab.py  dashboard.py  metrics.py  models.py  parallel.py  pool.py  safety.py  server.py  topology.py
src/mcp_telecom/tools/: __init__.py  interfaces.py  routing.py  system.py
src/mcp_telecom/transports/: __init__.py  netconf.py  snmp.py  telemetry.py
src/mcp_telecom/vendors/: __init__.py  mappings.py
tests/: conftest.py  test_audit.py  test_compliance.py  test_connection.py  test_containerlab.py  test_dashboard.py  test_metrics.py  test_models.py  test_netconf.py  test_parallel.py  test_pool.py  test_safety.py  test_snmp.py  test_telemetry.py  test_topology.py  test_vendors.py
